<resources>
    <string name="app_name">Spiela</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="default_navigation_view">Default Navigation View</string>
    <string name="custom_navigation_view">Custom Navigation View</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="others"></string>
    <string name="header_text1">Spiela</string>
    <string name="header_text2">a social collaboration space.</string>
    <string name="toolbar_title">Toolbar title</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Navigation View String Values  -->
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="jabber">Jabbers</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="textview">TextView</string>

</resources>
