<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Main Menus -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/explore"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_explore"
            android:title="@string/explore" />


        <item
            android:id="@+id/profile"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/jabber"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/ic_jabber"
            android:title="@string/jabber" />
    </group>

    <!--  Sub Menus  -->
    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/rate_app"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/rate" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help" />
            </group>
        </menu>
    </item>
</menu>